--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "webpage-server",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "start": "node build/src/server.js",
+    "prebuild": "rm -rf ./build",
+    "build": "tsc",
+    "postbuild": "cp -r package.json package-lock.json env/.env assets build/ && cd build && npm ci --only=production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
-    "test:dev": "jest "
+    "test:dev": "jest"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "AthanasiosChourlias",
+  "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.8.0",
@@ -22,6 +26,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "jest": "^27.4.7"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jest": "^27.4.7",
+    "winston": "^3.6.0"
   }
 }
