--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.21",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.8.0",
@@ -33,6 +34,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest": "^27.4.7",
+    "pg": "^8.8.0",
     "winston": "^3.6.0"
   }
 }
