--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,11 +13,19 @@ services:
     volumes:
       - webpage-db-data:/var/lib/postgresql/data
       - ../assets/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
 
   page-server:
     container_name: personal_webpage_dev_server
-    image: athanasioschourlias/webpageserver-dev-alpha:0.0.1 #We are taking the images from the registry based on tags for the versioning
+    #we can use images from the registry but because in the dev enviroment we will make many changes its more usefull to rebuild the image every time
+    build:
+      context: .. #Very important it refers where the root will be for the build.
+      dockerfile: docker/dockerfiles/Dockerfile.dev
+    #image: athanasioschourlias/webpageserver-dev:alpha-0.0.1 #We are taking the images from the registry based on tags for the versioning
     ports:
       - "${EXPOSED_PORT}:${PORT}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
     depends_on:
+      - page-db
+    links:
       - page-db
