--- a/docker/dockerfiles/Dockerfile.dev
+++ b/docker/dockerfiles/Dockerfile.dev
@@ -2,11 +2,13 @@ ARG version=14.17.1-alpine
 FROM node:${version}
 
 ENV NODE_ENV development
-
-RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY package*.json /usr/src/app
+#shit to satisfy node-gyp
+RUN apk add gcc g++ make python
+RUN apk add --update alpine-sdk
+
+COPY ./package*.json .
 RUN [ "npm" , "ci" ]
 COPY . /usr/src/app
 EXPOSE 3000
