--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/src/server.js",
-    "dev": "npm run build && npm start",
+    "dev": "npm run build && npm run migrate -- --config src/config/database.json -e development && npm start",
     "prod": "echo \"not implemented yet bc the steps are not known\"",
     "prebuild": "rm -rf ./build",
     "build": "tsc",
-    "postbuild": "cp -r package.json package-lock.json env/.env assets build/ && cd build && npm ci --only=production",
+    "postbuild": "cp -r package.json package-lock.json env/.env assets src/ build/ && cd build && npm ci --only=production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
-    "test:dev": "jest"
+    "test:dev": "jest",
+    "migrate": "db-migrate up",
+    "migrate:down": "db-migrate down",
+    "migrate:reset": "db-migrate reset"
   },
   "keywords": [],
   "author": "AthanasiosChourlias",
@@ -33,6 +36,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest": "^27.4.7",
