--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node build/src/server.js",
     "dev": "npm run build && npm run migrate -- --config src/config/database.json -e development && npm start",
-    "prod": "npm run build && ./scripts/wait-for.sh && npm run migrate -- --config src/config/database.json -e productio && npm start",
+    "preprod": "./scripts/wait-for.sh page-db:5432 -- npm run migrate -- --config src/config/database.json -e development ",
+    "prod": "npm run start",
     "prebuild": "rm -rf ./build",
     "build": "tsc",
     "postbuild": "cp -r package.json package-lock.json src/.env assets src/ build/ && cd build",
