--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,34 @@ node_modules
 build
 .DS_Store
 *.local
-src/.env
 
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# dotenv environment variables file
+*/.env
+.env.test
+.env.production
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+.vscode
 .idea
 
-client
+#When getting ready for production, the client dir
+Client
