--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/src/server.js",
     "dev": "npm run build && npm run migrate -- --config src/config/database.json -e development && npm start",
-    "preprod": "./scripts/wait-for.sh page-db:5432 -- npm run migrate -- --config src/config/database.json -e development ",
+    "preprod": "./scripts/wait-for.sh page-db:5432 -- npm run migrate -- --config build/src/config/database.json -e production ",
     "prod": "npm run start",
     "prebuild": "rm -rf ./build",
     "build": "tsc",
