--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 volumes:
   webpage-db-data:
+  client-images:
 
 services:
   page-db:
@@ -24,10 +25,12 @@ services:
       dockerfile: docker/dockerfiles/Dockerfile.prod
     environment:
       TOKEN_SECRET: "2r5u8x/A?D(G+KbPeSgVkYp3s6v9y$B&" #Default is 123
-    image: athanasioschourlias/webpageserver-dev:alpha-0.0.1 #We are taking the images from the registry based on tags for the versioning
+      NODE_ENV: "production"
+#    image: athanasioschourlias/webpageserver-dev:alpha-0.0.1 #We are taking the images from the registry based on tags for the versioning
     ports:
       - "${EXPOSED_PORT}:${PORT}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
-
+    volumes:
+      - client-images:/usr/src/app/build/client/images
     depends_on:
       - page-db
     links:
