--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,15 +6,15 @@ volumes:
 services:
   page-db:
     container_name: personal_web_page_dev_db
-    image: postgres
+    image: mongo:latest
     restart: always
     environment:
-      POSTGRES_PASSWORD: securepwd #user postgres
-    volumes:
-      - webpage-db-data:/var/lib/postgresql/data
-      - ../assets/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: rootpassword
     ports:
-      - "5432:5432"
+      - "27017:27017"
+    volumes:
+      - webpage-db-data:/data/db
 
   page-server:
     container_name: personal_webpage_dev_server
