--- a/src/.env.example
+++ b/src/.env.example
@@ -2,5 +2,7 @@ NODE_ENV=
 PORT=
 EXPOSED_PORT=
 TOKEN_SECRET=
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=securepwd
+DB_CONN_STRING="mongodb://root:rootpassword@page-db:27017"
+DB_NAME=""
+TECHNICAL_ARTICLES_COLLECTION_NAME="technical_article"
+HARDWARE_ARTICLES_COLLECTION_NAME="hardware_article"
