--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/src/server.js",
-    "dev": "npm run build && npm run migrate -- --config src/config/database.json -e development && npm start",
-    "preprod": "./scripts/wait-for.sh page-db:5432 -- npm run migrate -- --config build/src/config/database.json -e production ",
+    "dev": "npm start",
+    "preprod": "echo 'not implemented yet'",
     "prod": "npm run start",
     "prebuild": "rm -rf ./build",
     "build": "tsc",
-    "postbuild": "cp -r package.json package-lock.json src/.env assets src/ build/ && cd build",
+    "postbuild": "cp -r package.json package-lock.json src/.env src/ build/ && cd build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "test:dev": "jest",
@@ -39,6 +39,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest": "^27.4.7",
+    "mongodb": "^4.10.0",
     "winston": "^3.6.0"
   }
 }
