--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,9 +8,10 @@ services:
     container_name: personal_web_page_dev_db
     image: mongo:latest
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: rootpassword
+    #TODO - How to secure my db
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: mongo
+#      MONGO_INITDB_ROOT_PASSWORD: rootpass
     ports:
       - "27017:27017"
     volumes:
