--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest": "^27.4.7",
