--- a/src/.env.example
+++ b/src/.env.example
@@ -1,8 +1,6 @@
-NODE_ENV=
-PORT=
-EXPOSED_PORT=
-TOKEN_SECRET=
-DB_CONN_STRING="mongodb://root:rootpassword@page-db:27017"
-DB_NAME=""
-TECHNICAL_ARTICLES_COLLECTION_NAME="technical_article"
-HARDWARE_ARTICLES_COLLECTION_NAME="hardware_article"
+NODE_ENV=development
+PORT=3000
+EXPOSED_PORT=3000
+TOKEN_SECRET=123
+DB_CONN_STRING="mongodb://page-db:27017"
+DB_NAME="articlesDB"
