--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/Athanasioschourlias/pesonal-web-page-v3-server/issues"
   },
-  "homepage": "#",
+  "homepage": ".",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
@@ -36,7 +36,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
