--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.17.3",
     "jest": "^27.4.7",
     "mongodb": "^4.10.0",
+    "nodemailer": "^6.9.4",
     "winston": "^3.6.0"
   }
 }
