--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,12 @@
 NODE_ENV=development
 PORT=3000
 EXPOSED_PORT=3000
-TOKEN_SECRET=123
+TOKEN_SECRET=2r5u8x/A?D(G+KbPeSgVkYp3s6v9y$B&
 DB_CONN_STRING="mongodb://page-db:27017"
 DB_NAME="articlesDB"
+
+SMTP_HOST=smtp-relay.sendinblue.com
+SMTP_PORT=587
+SMTP_USERNAME=chiragmehta900@gmail.com
+SMTP_PASSWORD=xxxxxxxxxxxxxxxxxxxxxx
+SMTP_SENDER=somnium_nostri@snproweb.com
