--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.5.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.8.0",
@@ -36,8 +39,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@types/connect-history-api-fallback": "^1.5.0",
-    "@types/cors": "^2.8.13",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
