feature/PWPS-30 * Changed how ts config builds the porject * Included the client files in the build.sh script * Changed the Dockerfile.prod to use the script when building * Added Docker Build & Push Stage to Jenkins Pipeline

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run build && npm start",
     "preprod": "echo 'not implemented yet'",
     "prod": "npm run start",
-    "prebuild": "rm -rf ./build",
+    "prebuild": "rm -rf ./build ./build_client",
     "build": "tsc",
     "postbuild": "cp -r package.json package-lock.json src/.env src/ build/ && cd build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
