--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -16,14 +16,10 @@ services:
 
   page-server:
     container_name: personal_webpage_dev_server
-    #we can use images from the registry but because in the dev enviroment we will make many changes its more usefull to rebuild the image every time
-    build:
-      context: .. #Very important it refers where the root will be for the build.
-      dockerfile: docker/dockerfiles/Dockerfile.prod
     environment:
       TOKEN_SECRET: "2r5u8x/A?D(G+KbPeSgVkYp3s6v9y$B&" #Default is 123
       NODE_ENV: "production"
-#    image: athanasioschourlias/webpageserver-dev:alpha-0.0.1 #We are taking the images from the registry based on tags for the versioning
+    image: chmaikos/devops_hua:latest #We are taking the images from the registry based on tags for the versioning
     ports:
       - "${EXPOSED_PORT}:${PORT}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
     volumes:
