feature/PWPS-30 * Test commit to see pipeline working as intented

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .env.test
 .env.production
 
-# Stores VSCode versions used for testing VSCode extensions
+# Stores VSCode versions used for testing VSCode extensions #
 .vscode-test
 .vscode
 .idea
