--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -17,11 +17,11 @@ services:
   page-server:
     container_name: personal_webpage_dev_server
     environment:
-      TOKEN_SECRET: "2r5u8x/A?D(G+KbPeSgVkYp3s6v9y$B&" #Default is 123
-      NODE_ENV: "production"
+      TOKEN_SECRET: "${TOKEN_SECRET:-123}" #Default is 123
+      NODE_ENV: "${NODE_ENV:-production}"
     image: chmaikos/devops_hua:latest #We are taking the images from the registry based on tags for the versioning
     ports:
-      - "${EXPOSED_PORT}:${PORT}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
+      - "${EXPOSED_PORT:-80}:${PORT:-80}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
     volumes:
       - client-images:/usr/src/app/build/client/images
     depends_on:
