--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -17,8 +17,8 @@ services:
   page-server:
     container_name: personal_webpage_dev_server
     environment:
-      TOKEN_SECRET: "${TOKEN_SECRET:-123}" #Default is 123
-      NODE_ENV: "${NODE_ENV:-production}"
+      - TOKEN_SECRET="${TOKEN_SECRET:-123}" #Default is 123
+      - NODE_ENV="${NODE_ENV:-production}"
     image: chmaikos/devops_hua:latest #We are taking the images from the registry based on tags for the versioning
     ports:
       - "${EXPOSED_PORT:-80}:${PORT:-80}" #container port (PORT, from .env), assigned to given host port, the exposed from the dockerfile (EXPOSED_PORT)
