--- a/kubernetes/page-server-service.yaml
+++ b/kubernetes/page-server-service.yaml
@@ -11,7 +11,7 @@ metadata:
   namespace: default
 spec:
   ports:
-    - name: "80"
+    - protocol: TCP
       port: 80
       targetPort: 80
   selector:
