feature/PWPS-30 * Fix ingress declaration

--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: yourdomain.com
+  - host: devops.red-net.gr
     http:
       paths:
       - path: /
