--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -2,9 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: page-server-ingress
+  namespace: devops  # Make sure this is set correctly
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: traefik
   rules:
   - host: devops.red-net.gr
     http:
