--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -39,11 +41,13 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest": "^27.4.7",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.10.0",
     "nodemailer": "^6.9.4",
     "winston": "^3.6.0"
