--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .env.test
 .env.production
 
+# Terraform environment variables file
+*.tfvars
+.terraform
+*.tfstate*
+
 # Stores VSCode versions used for testing VSCode extension
 .vscode-test
 .vscode
