devops * Added nginx config and made production docker-compose use it * Modified server.ts to stop it from using express to server static

--- a/ansible/deploy_docker.yml
+++ b/ansible/deploy_docker.yml
@@ -21,4 +21,4 @@
 
     - name: Pull and run the Docker Compose stack
       shell:
-        cmd: "docker compose -f {{ dest_folder }}/{{ compose_file }} pull && docker compose -f {{ dest_folder }}/{{ compose_file }} up -d"
+        cmd: "docker compose -f {{ dest_folder }}/{{ compose_file }} pull && docker compose -f {{ dest_folder }}/{{ compose_file }} up --force-recreate -d"
