--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: "3.9"
 volumes:
   webpage-db-data:
   client-images:
+  static-client:
 
 networks:
   backend-network:
@@ -23,12 +24,24 @@ services:
     environment:
       - TOKEN_SECRET=${TOKEN_SECRET:-123}
       - NODE_ENV=${NODE_ENV:-production}
-    image: chmaikos/devops_hua:latest 
-    ports:
-      - "${EXPOSED_PORT:-80}:${PORT:-3000}"
+    image: chmaikos/devops_hua:latest
     volumes:
       - client-images:/usr/src/app/build/client/images
+      - static-client:/usr/src/app/build/client  # Map static files to shared volume
     depends_on:
       - page-db
+    networks:
+      - backend-network
+
+  nginx:
+    container_name: personal_webpage_nginx
+    image: nginx:latest
+    volumes:
+      - ../nginx/nginx_docker.conf:/etc/nginx/nginx.conf
+      - static-client:/etc/html/www/static/client  # Map shared volume to Nginx path
+    ports:
+      - "80:80"  # Expose port 80 to the world
+    depends_on:
+      - page-server
     networks:
       - backend-network
