--- a/nginx/nginx_docker.conf
+++ b/nginx/nginx_docker.conf
@@ -1,21 +1,27 @@
-server {
-  listen 80;
+events {
+  worker_connections 1024;  # Adjust to your needs
+}
 
-  server_name devops-docker.red-net.gr;
+http {
+  server {
+    listen 80;
 
-  root /etc/html/www/static/client;  # Absolute path to your static files
+    server_name devops-docker.red-net.gr;
 
-  # Try to serve file directly, fallback to proxying to Node.js app
-  location / {
-    try_files $uri $uri/ @nodejs;
-  }
+    root /etc/html/www/static/client;  # Absolute path to your static files
 
-  location @nodejs {
-    proxy_pass http://page-server:3000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    # Try to serve file directly, fallback to proxying to Node.js app
+    location / {
+      try_files $uri $uri/ @nodejs;
+    }
+
+    location @nodejs {
+      proxy_pass http://page-server:3000;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
   }
 }
