--- a/nginx/nginx_docker.conf
+++ b/nginx/nginx_docker.conf
@@ -3,6 +3,9 @@ events {
 }
 
 http {
+  include mime.types;
+  default_type application/octet-stream;
+
   server {
     listen 80;
 
@@ -10,18 +13,25 @@ http {
 
     root /etc/html/www/static/client;  # Absolute path to your static files
 
-    # Try to serve file directly, fallback to proxying to Node.js app
-    location / {
-      try_files $uri $uri/ @nodejs;
-    }
+    index index.html;
 
-    location @nodejs {
+    # Forward requests to Node.js for paths starting with /api
+    location /api/ {
       proxy_pass http://page-server:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
+    }
+
+    # Serve static files for other paths
+    location / {
+      try_files $uri $uri/ =404;
+    }
+
+    location ~ \.js$ {
+      add_header Content-Type application/javascript;
     }
   }
 }
