--- a/nginx/nginx_docker.conf
+++ b/nginx/nginx_docker.conf
@@ -27,7 +27,7 @@ http {
 
     # Serve static files for other paths
     location / {
-      try_files $uri $uri/ =404;
+      try_files $uri $uri/ /index.html;  # Note the addition of /index.html
     }
 
     location ~ \.js$ {
