--- a/ansible/deploy_docker.yml
+++ b/ansible/deploy_docker.yml
@@ -3,17 +3,36 @@
   hosts: docker
   become: yes
   vars:
-    ansible_ssh_user: root
+    ansible_ssh_user: "root"
     compose_url: "https://raw.githubusercontent.com/Athanasioschourlias/pesonal-web-page-v3-server/devops/docker/docker-compose.prod.yml"
     nginx_conf_url: "https://raw.githubusercontent.com/Athanasioschourlias/pesonal-web-page-v3-server/devops/nginx/nginx_docker.conf"
-    compose_dest: "/opt/docker-compose/docker-compose.prod.yml"
+    compose_dest: "/opt/docker-compose/"
+    compose_file: "docker-compose.prod.yml"
+    env_name: ".env"
     nginx_conf_dest: "/opt/nginx/nginx_docker.conf"
+    node_env: "production"
+    port: "3000"
+    exposed_port: "3000"
+    token_secret: "123"
+    db_conn_string: "mongodb://page-db:27017"
+    db_name: "blogDb"
+    smtp_host: "smtp.gmail.com"
+    smtp_port: "587"
+    smtp_username: "thanos.chourlias+form@gmail.com"
+    smtp_password: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          34333231356664316130383239333738393235613764663965353266303338343531326130366639
+          3937613931303735646538336531633033373536303662360a623834303339623465636137326165
+          66653337653037616139326130613633326431616337633563653436303437313639376236663861
+          3064326333656239380a656565383333653463303061346430316561663534656361343630316464
+          32346266633733396430623961613565663935333238396236396166333836336662
+    smtp_sender: "thanos.chourlias+form@gmail.com"
 
   tasks:
     - name: Fetch Docker Compose file from GitHub
       get_url:
         url: "{{ compose_url }}"
-        dest: "{{ compose_dest }}"
+        dest: "{{ compose_dest }}/{{ compose_file}}"
 
     - name: Fetch Nginx Configuration from GitHub
       get_url:
@@ -22,9 +41,15 @@
 
     - name: Remove any existing Docker Compose stack with the same name
       shell:
-        cmd: "docker compose -f {{ compose_dest }} down -v || true"
-      ignore_errors: yes  # Ignore errors if the stack is not currently running
+        cmd: "docker compose -f {{ compose_dest }}/{{ compose_file}} down -v || true"
+      ignore_errors: yes  
+
+    - name: Deploy .env from template
+      template:
+        src: .env.j2  # Make sure to put the path where you have stored your .env.j2
+        dest: "{{ compose_dest }}/{{ env_name }}"
+
 
     - name: Pull and run the Docker Compose stack
       shell:
-        cmd: "docker compose -f {{ compose_dest }} pull && docker compose -f {{ compose_dest }} up --force-recreate -d"
+        cmd: "docker compose -f {{ compose_dest }}/{{ compose_file}} pull && docker compose -f {{ compose_dest }}/{{ compose_file}} up --force-recreate -d"
