--- a/ansible/deploy_docker.yml
+++ b/ansible/deploy_docker.yml
@@ -27,6 +27,7 @@
           3064326333656239380a656565383333653463303061346430316561663534656361343630316464
           32346266633733396430623961613565663935333238396236396166333836336662
     smtp_sender: "thanos.chourlias+form@gmail.com"
+    api_base_url: http://devops-docker.red-net.gr/api/v1/
 
   tasks:
     - name: Fetch Docker Compose file from GitHub
