--- a/ansible/deploy_docker.yml
+++ b/ansible/deploy_docker.yml
@@ -28,6 +28,8 @@
           32346266633733396430623961613565663935333238396236396166333836336662
     smtp_sender: "thanos.chourlias+form@gmail.com"
     api_base_url: http://devops-docker.red-net.gr/api/v1/
+    my_email: "chmaikos@red-net.gr"
+    my_domain: "devops-docker.red-net.gr"
 
   tasks:
     - name: Fetch Docker Compose file from GitHub
