devops * Add SSL Capabilities to docker-compose

--- a/nginx/nginx_docker.conf
+++ b/nginx/nginx_docker.conf
@@ -15,6 +15,12 @@ http {
 
     index index.html;
 
+        # Acme challenge
+    location ~ /.well-known/acme-challenge/ {
+      allow all;
+      root /data/letsencrypt;
+    }
+
     # Forward requests to Node.js for paths starting with /api
     location /api/ {
       proxy_pass http://page-server:3000;
