--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -4,6 +4,8 @@ volumes:
   webpage-db-data:
   client-images:
   static-client:
+  letsencrypt:
+  letsencrypt_data:
 
 networks:
   backend-network:
@@ -48,8 +50,9 @@ services:
     image: nginx:latest
     volumes:
       - ../nginx/nginx_docker.conf:/etc/nginx/nginx.conf
-      - static-client:/etc/html/www/static/client  # Map shared volume to Nginx path
-      - ./letsencrypt:/etc/letsencrypt
+      - static-client:/etc/html/www/static/client
+      - letsencrypt:/etc/letsencrypt
+      - letsencrypt_data:/data/letsencrypt  # Shared volume
     ports:
       - "80:80"
       - "443:443"
@@ -61,11 +64,11 @@ services:
   certbot:
     image: certbot/certbot
     volumes:
-      - ./letsencrypt:/etc/letsencrypt  # Certificate storage
-      - ./letsencrypt_data:/data/letsencrypt
+      - letsencrypt:/etc/letsencrypt  # Certificate storage
+      - letsencrypt_data:/data/letsencrypt  # Shared volume
     environment:
       - MY_EMAIL=${MY_EMAIL}
       - MY_DOMAIN=${MY_DOMAIN}
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/data/letsencrypt --email ${MY_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${MY_DOMAIN},${MY_DOMAIN}
+    command: certonly --webroot --webroot-path=/data/letsencrypt --email ${MY_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${MY_DOMAIN}
