devops * Add SSL Capabilities to docker-compose

--- a/nginx/nginx_docker.conf
+++ b/nginx/nginx_docker.conf
@@ -6,20 +6,32 @@ http {
   include mime.types;
   default_type application/octet-stream;
 
+  # Redirect all HTTP traffic to HTTPS
   server {
     listen 80;
-
     server_name devops-docker.red-net.gr;
-
-    root /etc/html/www/static/client;  # Absolute path to your static files
-
-    index index.html;
-
-        # Acme challenge
+    
     location ~ /.well-known/acme-challenge/ {
       allow all;
       root /data/letsencrypt;
     }
+    
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  # HTTPS server
+  server {
+    listen 443 ssl;
+
+    server_name devops-docker.red-net.gr;
+
+    ssl_certificate /etc/letsencrypt/live/devops-docker.red-net.gr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/devops-docker.red-net.gr/privkey.pem;
+
+    root /etc/html/www/static/client;
+    index index.html;
 
     # Forward requests to Node.js for paths starting with /api
     location /api/ {
@@ -33,7 +45,7 @@ http {
 
     # Serve static files for other paths
     location / {
-      try_files $uri $uri/ /index.html;  # Note the addition of /index.html
+      try_files $uri $uri/ /index.html;
     }
 
     location ~ \.js$ {
