--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -71,4 +71,4 @@ services:
       - MY_DOMAIN=${MY_DOMAIN}
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/data/letsencrypt --email ${MY_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${MY_DOMAIN}
+    command: certonly --webroot --webroot-path=/data/letsencrypt --agree-tos --no-eff-email --force-renewal -d ${MY_DOMAIN}
