--- a/nginx/user_conf.d/nginx_docker.conf
+++ b/nginx/user_conf.d/nginx_docker.conf
@@ -15,6 +15,8 @@ http {
     ssl_certificate /etc/letsencrypt/live/devops-docker.red-net.gr/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/devops-docker.red-net.gr/privkey.pem;
 
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
     root /etc/html/www/static/client;
     index index.html;
 
