devops * Change FQDN

--- a/nginx/user_conf.d/nginx_docker.conf
+++ b/nginx/user_conf.d/nginx_docker.conf
@@ -1,10 +1,10 @@
 server {
   listen 443 ssl;
 
-  server_name devops-docker.red-net.gr;
+  server_name dev-thanos.red-net.gr;
 
-  ssl_certificate /etc/letsencrypt/live/devops-docker.red-net.gr/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/devops-docker.red-net.gr/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/dev-thanos.red-net.gr/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/dev-thanos.red-net.gr/privkey.pem;
 
   ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
 
